<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:enabled="false"
        android:text="@string/app_name"/>


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:enabled="false"
        android:gravity="center" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="8"
        android:columnCount="3"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/delete_image_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="center"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/delete" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/number_1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/number_1"/>

        <Button
            android:id="@+id/number_2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/number_2"/>

        <Button
            android:id="@+id/number_3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/number_3"/>

        <Button
            android:id="@+id/number_4_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/number_4"/>

        <Button
            android:id="@+id/number_5_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/number_5"/>

        <Button
            android:id="@+id/number_6_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/number_6"/>

        <Button
            android:id="@+id/number_7_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/number_7"/>

        <Button
            android:id="@+id/number_8_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/number_8"/>

        <Button
            android:id="@+id/number_9_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/number_9"/>

        <Button
            android:id="@+id/star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/star"/>

        <Button
            android:id="@+id/number_0_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:text="@string/number_0"/>

        <Button
            android:id="@+id/diez_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            android:text="@string/diez"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="6"
            android:layout_column="0"/>

        <ImageButton
            android:id="@+id/call_image_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/phone"
            android:layout_row="7"
            android:layout_column="0"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/decline_image_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/decline"
            android:layout_row="7"
            android:layout_column="2"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>




    </GridLayout>

    <TextView
        android:id="@+id/acceleration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accel X: 0.0"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

</LinearLayout>